# ChessEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  perf.data
.cache/clangd/index/: main.cpp.D411F03A249A3F8E.idx
src/Main/: debug.cpp  main.cpp
src/board_manager/: board_manager.cpp
src/evaluate/: evaluate.cpp
src/include/: board_manager.hpp  evaluate.hpp  lookup_tables.hpp  search.hpp
src/lookup_tables/: lookup_tables.cpp
src/search/: search.cpp
tests/: one_test.cpp  test_move_gen.cpp  test_move_making.cpp
